k8s/tinier-url-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tinier-url
  name: tinier-url
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tinier-url
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/tinynet: "true"
        io.kompose.service: tinier-url
    spec:
      containers:
      - image: pranavjoy/tinier_url:latest
        imagePullPolicy: ""
        name: tinier-url
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
