k8s/tinynet-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: tinynet
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/tinynet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/tinynet: "true"
